--- a/BestarProject/ShoppingMall/res/layout/fragment_register_next.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_register_next.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/register_background"
     android:clickable="true">
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/content_frame"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -175,6 +180,7 @@
                         android:hint="请输入姓名"
                         android:minWidth="100dp"
                         android:singleLine="true"
+                        android:textSize="16sp"
                         android:textColorHint="#afafaf" />
                 </RelativeLayout>
 
@@ -271,6 +277,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:background="@null"
+                        android:textSize="16sp"
                         android:singleLine="true"
                         android:hint="请输入电话"
                         android:inputType="phone"
@@ -327,6 +334,7 @@
                         android:background="@null"
                         android:hint="请输入名称"
                         android:singleLine="true"
+                        android:textSize="16sp"
                         android:minWidth="100dp"
                         android:textColorHint="#afafaf" />
                 </RelativeLayout>
@@ -365,15 +373,18 @@
                         android:textSize="16sp"
                         tools:ignore="TextFields" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/youeryuanaddress"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:background="@null"
-                        android:hint="请输入地址"
+                        android:hint="省  市  区 地址"
+                        android:textSize="16sp"
+                        android:gravity="right|center_vertical"
                         android:singleLine="true"
+                        android:drawableRight="@drawable/ic_arrow"
                         android:minWidth="100dp"
                         android:textColorHint="#afafaf" />
                 </RelativeLayout>
@@ -422,6 +433,7 @@
                         android:background="@null"
                         android:inputType="phone"
                         android:hint="请输入电话"
+                        android:textSize="16sp"
                         android:minWidth="100dp"
                         android:textColorHint="#afafaf" />
                 </RelativeLayout>
@@ -633,5 +645,36 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_gravity="end"
+        android:background="#fff"
+        android:choiceMode="singleChoice"
+        android:id="@+id/left_drawer"
+        >
+        <ListView
+            android:id="@+id/ProvinceList"
+            android:layout_width="100dp"
+            android:scrollbars="none"
+            android:layout_height="match_parent"
+            android:divider="#666"
+            android:dividerHeight="1dp" />
+        <ListView
+            android:id="@+id/CityList"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:divider="#666"
+            android:scrollbars="none"
+            android:dividerHeight="1dp" />
+        <ListView
+            android:id="@+id/CountyList"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:divider="#666"
+            android:scrollbars="none"
+            android:dividerHeight="1dp" />
+    </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
 </RelativeLayout>
