--- a/BestarProject/ShoppingMall/res/layout/fragment_login.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_login.xml
@@ -4,96 +4,118 @@
     android:id="@+id/login_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
     android:background="@color/app_theme_color"
-    android:clickable="true"
-     >
+    android:clickable="true">
+
+    <ScrollView android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@drawable/shape_login_input_bg"
-            android:layout_centerInParent="true"
-            android:id="@+id/inputLayout"
-            android:orientation="vertical" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/login_username"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:gravity="center"
-                android:hint="请您输入账号"
-                android:textColorHint="@color/color_ffffff"
-                android:inputType="number"
-                android:maxLength="11"
-                android:textSize="16sp"
-                android:textColor="@color/color_ffffff"
-                tools:ignore="TextFields,Deprecated" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/inputLayout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="40dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/icon_login_logo" />
 
-            <View
+            <LinearLayout
+                android:id="@+id/inputLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/shape_login_input_bg"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/login_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:hint="请您输入账号"
+                    android:inputType="number"
+                    android:maxLength="11"
+                    android:textColor="@color/color_ffffff"
+                    android:textColorHint="@color/color_ffffff"
+                    android:textSize="16sp"
+                    tools:ignore="TextFields,Deprecated" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#fff"></View>
+
+                <EditText
+                    android:id="@+id/login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:hint="请您输入密码"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
+                    android:textColor="@color/color_ffffff"
+                    android:textColorHint="@color/color_ffffff"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/login_loginbutton"
+                android:layout_width="fill_parent"
+                android:layout_height="42dp"
+                android:layout_below="@+id/inputLayout"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/selector_login_btn"
+                android:text="登录"
+                android:textColor="@color/app_theme_color"
+                android:textSize="22sp" />
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#fff"
-                ></View>
-            <EditText
-                android:id="@+id/login_password"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:gravity="center"
-                android:hint="请您输入密码"
-                android:inputType="textPassword"
-                android:textColor="@color/color_ffffff"
-                android:maxLength="20"
-                android:textColorHint="@color/color_ffffff"
-                android:textSize="16sp" />
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/forget_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:text="忘记密码？"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/userRegisterTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:text="用户注册"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+            </RelativeLayout>
         </LinearLayout>
+    </ScrollView>
 
-        <Button
-            android:id="@+id/login_loginbutton"
-            android:layout_width="fill_parent"
-            android:layout_height="42dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/selector_login_btn"
-            android:text="登录"
-            android:layout_below="@+id/inputLayout"
-            android:textColor="@color/app_theme_color"
-            android:textSize="22sp" />
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/forget_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="忘记密码？"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textColor="#fff"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/userRegisterTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="用户注册"
-                android:layout_alignParentRight="true"
-                android:textColor="#fff"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textSize="16sp" />
-        </RelativeLayout>
 
 </RelativeLayout>
