--- a/BestarProject/ShoppingMall/res/layout/item_refresh_top.xml
+++ b/BestarProject/ShoppingMall/res/layout/item_refresh_top.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="指示器"
-                android:src="@drawable/screening" />
+                android:src="@drawable/r_pre" />
         </LinearLayout>
 
        <!--  <LinearLayout
