--- a/BestarProject/ShoppingMall/res/values/styles.xml
+++ b/BestarProject/ShoppingMall/res/values/styles.xml
@@ -209,14 +209,14 @@
     <style name="home_layout">
         <item name="android:padding">8dp</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">100dp</item>
         <item name="android:background">#fff</item>
         <item name="android:layout_weight">1</item>
     </style>
     <style name="home_image">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">right|bottom</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:adjustViewBounds">true</item>
     </style>
